Fix Horizontal Scrollbars not updating when content  overflows

--- a/packages/@mantine/core/src/components/ScrollArea/ScrollArea.module.css
+++ b/packages/@mantine/core/src/components/ScrollArea/ScrollArea.module.css
@@ -3,6 +3,10 @@
 
   position: relative;
   overflow: hidden;
+
+  &:where([data-autosize]) .content {
+    width: min-content;
+  }
 }
 
 .viewport {
